# pythess

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  build  db.sqlite3  manage.py  pyproject.toml  urls.py
main/: admin.py  feeds.py  meetup.py  models.py  urls.py  views.py
main/management/commands/: fill_out_bios.py  generate_person_images.py
main/migrations/: 0001_initial.py  0002_alter_person_options_remove_event_presentations_and_more.py  0003_alter_presentation_options_presentation_order.py  0004_alter_event_options_event_slug.py  0005_alter_event_slug.py  0006_event_meetup_com_id.py  0007_alter_person_options_person_slug.py  0008_alter_person_slug.py  0009_person_gender.py  0010_person_bio.py
misc/: _headers  get_presentations.py  parse_events.py  scrape_meetup.py  scrapemeetup.py  urlify.py
pythess/: asgi.py  settings.py  urls.py  wsgi.py
root_files/: _headers
static/admin/: event_admin.css
static/images/favicon/: site.webmanifest
templates/: 404.html  base.html  index.html  meetup.html  onesignal.html  past_meetups.html  people.html  person.html  person_photo.html  presentation.html  presentations.html  rules.html  splash.html
templates/admin/main/event/: change_form.html
