[project]
name = "pythess"
version = "0.1.0"
description = "The website and files for the Python meetup"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-distill>=3.2.7",
    "django-extensions>=3.2.3",
    "django>=5.1.5",
    "werkzeug>=3.1.3",
]


[tool.setuptools]
py-modules = []
packages = []

[bdist_wheel]
universal = 0

[tool.poetry]
build = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
